change position of controls in body-public, to avoid an overlap of controls panal and first item within a shared folder

--- a/core/css/server.css
+++ b/core/css/server.css
@@ -497,3 +497,7 @@ div#navigation.menu, div#expanddiv.menu{
     top: 220px;
     padding-top: 33px;
 }
+
+#body-public #controls{
+    position: fixed;
+}
